[package]
name = "podesta"
version = "0.1.0"
authors = ["Tim Alberdingk Thijm <tim.thijm@gmail.com>"]

[dependencies]
libc = "0.2"
#rustbox = "*"
rand = "0.3.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rouler = "0.1.3"
clap = "2.22.2"
#termion = "1.0"
macro-attr = "0.2.0"
enum_derive = "0.1.7"
