[package]
name = "podesta"
version = "0.1.0"
authors = ["Tim Alberdingk Thijm <tim.thijm@gmail.com>"]

[dependencies]
libc = "0.2"
names = "0.11.0"
time = "0.1"
shlex = "0.1.1"
rand = "0.3.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
bincode = "0.7.0"
rouler = "0.1.3"
clap = "2.22.2"
#termion = "1.0"
macro-attr = "0.2.0"
enum_derive = "0.1.7"
